S12P31A206-167 fix: 초기 세팅 시 api token 발급