@@ -91,7 +91,17 @@ public class ServerServiceImpl implements ServerService {
             log.info("모든 인프라 설정 세팅을 완료했습니다.");
 
             // jenkins api token 생성 및 저장
-            //issueAndSaveToken(project.getId(), project.getServerIP());
+            issueAndSaveToken(project.getId(), project.getServerIP());
+
+            String deleteInitTokenScriptCmd = "sudo rm -f /var/lib/jenkins/init.groovy.d/init_token.groovy";
+            log.info("init.groovy.d 토큰 발급 스크립트 삭제 시도");
+            String deleteOutput = execCommand(sshSession, deleteInitTokenScriptCmd);
+            log.info("삭제 결과:\n{}", deleteOutput);
+
+            String removeTokenLogCmd = "sudo sed -i '/\\[INIT\\] Jenkins API Token:/d' /var/log/jenkins/jenkins.log";
+            log.info("Jenkins 로그에서 토큰 출력 라인 제거 시도");
+            String removeLogOutput = execCommand(sshSession, removeTokenLogCmd);
+            log.info("로그 제거 결과:\n{}", removeLogOutput);
 
         } catch (JSchException e) {
             log.error("SSH 연결 실패 (host={}): {}", host, e.getMessage());
@@ -325,7 +335,21 @@ public class ServerServiceImpl implements ServerService {
                         "</user>\n" +
                         "EOF" ,
 
+                "sudo mkdir -p /var/lib/jenkins/init.groovy.d",
+                "sudo tee /var/lib/jenkins/init.groovy.d/init_token.groovy > /dev/null <<EOF\n" +
+                        "import jenkins.model.*\n" +
+                        "import hudson.security.*\n" +
+                        "import jenkins.security.ApiTokenProperty\n" +
+                        "def instance = Jenkins.get()\n" +
+                        "def user = instance.getSecurityRealm().createAccount('admin', 'pwd123')\n" +
+                        "user.save()\n" +
+                        "def token = user.getProperty(ApiTokenProperty.class).getTokenStore().generateNewToken('init-token')\n" +
+                        "println(\"[INIT] Jenkins API Token: \" + token.plainValue)\n" +
+                        "EOF",
+
                 "sudo chown -R jenkins:jenkins /var/lib/jenkins/users",
+                "sudo chown -R jenkins:jenkins /var/lib/jenkins/init.groovy.d",
+
                 "curl -L https://github.com/jenkinsci/plugin-installation-manager-tool/releases/download/2.12.13/jenkins-plugin-manager-2.12.13.jar -o ~/jenkins-plugin-cli.jar",
                 "sudo systemctl stop jenkins",
 
@@ -726,17 +750,120 @@ public class ServerServiceImpl implements ServerService {
         return List.of("sudo chmod -R 777 /var/lib/jenkins/workspace");
     }
 
+//    private void issueAndSaveToken(Long projectId, String serverIp) {
+//        try {
+//            String jenkinsUrl = "http://" + serverIp + ":9090";
+//            String jenkinsJobName = "auto-created-deployment-job";
+//            String jenkinsUsername = "admin";
+//            String jenkinsToken = generateTokenViaCurl(
+//                    jenkinsUrl,
+//                    jenkinsUsername,
+//                    "pwd123",
+//                    jenkinsUsername
+//            );
+//
+//            JenkinsInfo jenkinsInfo = JenkinsInfo.builder()
+//                    .projectId(projectId)
+//                    .baseUrl(jenkinsUrl)
+//                    .username(jenkinsUsername)
+//                    .apiToken(jenkinsToken)
+//                    .jobName(jenkinsJobName)
+//                    .build();
+//
+//            jenkinsInfoRepository.save(jenkinsInfo);
+//            log.info("Jenkins API 토큰을 DB에 저장했습니다.");
+//
+//        } catch (Exception e) {
+//            log.error("Jenkins 토큰 발급 또는 저장 실패", e);
+//            throw new BusinessException(ErrorCode.JENKINS_TOKEN_SAVE_FAILED);
+//        }
+//    }
+//
+//    private String generateTokenViaCurl(String jenkinsUrl, String username, String password, String tokenName) {
+//        try {
+//            ObjectMapper mapper = new ObjectMapper();
+//
+//            // 쿠키 저장용 임시 파일 생성
+//            File cookieFile = File.createTempFile("jenkins_cookie", ".txt");
+//            String cookiePath = cookieFile.getAbsolutePath().replace("\\", "/");
+//
+//            // 1. Crumb + 쿠키 요청
+//            List<String> crumbCommand = Arrays.asList(
+//                    "curl",
+//                    "-u", username + ":" + password,
+//                    "-c", cookiePath,
+//                    "-s",
+//                    jenkinsUrl + "/crumbIssuer/api/json"
+//            );
+//
+//            Process crumbProcess = new ProcessBuilder(crumbCommand)
+//                    .redirectErrorStream(true).start();
+//
+//            String crumbResponse = new BufferedReader(new InputStreamReader(crumbProcess.getInputStream()))
+//                    .lines().collect(Collectors.joining());
+//
+//            log.info("Crumb 응답: " + crumbResponse);
+//            if (!crumbResponse.trim().startsWith("{")) {
+//                throw new BusinessException(ErrorCode.JENKINS_CRUMB_REQUEST_FAILED);
+//            }
+//
+//            JsonNode crumbJson = mapper.readTree(crumbResponse);
+//            String crumb = crumbJson.get("crumb").asText();
+//            String crumbField = crumbJson.get("crumbRequestField").asText();
+//
+//            // 2️. 토큰 요청
+//            String tokenUrl = jenkinsUrl + "/user/" + username + "/descriptorByName/jenkins.security.ApiTokenProperty/generateNewToken";
+//            String tokenJsonPayload = "{\"newTokenName\":\"" + tokenName + "\"}";
+//
+//            List<String> curlCommand = Arrays.asList(
+//                    "curl",
+//                    "-u", username + ":" + password,
+//                    "-b", cookiePath,
+//                    "-c", cookiePath,
+//                    "-s",
+//                    "-X", "POST",
+//                    tokenUrl,
+//                    "-H", crumbField + ":" + crumb,
+//                    "-H", "Content-Type: application/json",
+//                    "-H", "Referer: " + jenkinsUrl + "/",
+//                    "-d", tokenJsonPayload
+//            );
+//
+//
+//            Process tokenProcess = new ProcessBuilder(curlCommand)
+//                    .redirectErrorStream(true).start();
+//
+//            String tokenResponse = new BufferedReader(new InputStreamReader(tokenProcess.getInputStream()))
+//                    .lines().collect(Collectors.joining());
+//
+//
+//            if (!tokenResponse.trim().startsWith("{")) {
+//                throw new BusinessException(ErrorCode.JENKINS_TOKEN_RESPONSE_INVALID);
+//            }
+//
+//            JsonNode tokenJson = mapper.readTree(tokenResponse);
+//            String token = tokenJson.path("data").path("tokenValue").asText();
+//
+//            if (token == null || token.isBlank()) {
+//                throw new BusinessException(ErrorCode.JENKINS_TOKEN_PARSE_FAILED);
+//            }
+//
+//            return token;
+//
+//        } catch (Exception e) {
+//            e.printStackTrace();
+//            throw new BusinessException(ErrorCode.JENKINS_TOKEN_REQUEST_FAILED);
+//        }
+//    }
+
     private void issueAndSaveToken(Long projectId, String serverIp) {
         try {
             String jenkinsUrl = "http://" + serverIp + ":9090";
             String jenkinsJobName = "auto-created-deployment-job";
             String jenkinsUsername = "admin";
-            String jenkinsToken = generateTokenViaCurl(
-                    jenkinsUrl,
-                    jenkinsUsername,
-                    "pwd123",
-                    jenkinsUsername
-            );
+
+            // 비밀번호 없이 로그에서 토큰 추출
+            String jenkinsToken = generateTokenViaLogParse(serverIp);
 
             JenkinsInfo jenkinsInfo = JenkinsInfo.builder()
                     .projectId(projectId)
@@ -747,90 +874,45 @@ public class ServerServiceImpl implements ServerService {
                     .build();
 
             jenkinsInfoRepository.save(jenkinsInfo);
-            log.info("Jenkins API 토큰을 DB에 저장했습니다.");
+            log.info("Jenkins API 토큰을 로그에서 파싱해 DB에 저장했습니다.");
 
         } catch (Exception e) {
-            log.error("Jenkins 토큰 발급 또는 저장 실패", e);
+            log.error("Jenkins 토큰 파싱 또는 저장 실패", e);
             throw new BusinessException(ErrorCode.JENKINS_TOKEN_SAVE_FAILED);
         }
     }
 
-    private String generateTokenViaCurl(String jenkinsUrl, String username, String password, String tokenName) {
+    private String generateTokenViaLogParse(String serverIp) {
         try {
-            ObjectMapper mapper = new ObjectMapper();
-
-            // 쿠키 저장용 임시 파일 생성
-            File cookieFile = File.createTempFile("jenkins_cookie", ".txt");
-            String cookiePath = cookieFile.getAbsolutePath().replace("\\", "/");
-
-            // 1. Crumb + 쿠키 요청
-            List<String> crumbCommand = Arrays.asList(
-                    "curl",
-                    "-u", username + ":" + password,
-                    "-c", cookiePath,
-                    "-s",
-                    jenkinsUrl + "/crumbIssuer/api/json"
+            List<String> command = List.of(
+                    "ssh", "ubuntu@" + serverIp,
+                    "sudo cat /var/log/jenkins/jenkins.log | grep '\\[INIT\\] Jenkins API Token'"
             );
 
-            Process crumbProcess = new ProcessBuilder(crumbCommand)
-                    .redirectErrorStream(true).start();
+            Process process = new ProcessBuilder(command).redirectErrorStream(true).start();
 
-            String crumbResponse = new BufferedReader(new InputStreamReader(crumbProcess.getInputStream()))
-                    .lines().collect(Collectors.joining());
+            String result = new BufferedReader(new InputStreamReader(process.getInputStream()))
+                    .lines().collect(Collectors.joining("\n"));
 
-            log.info("Crumb 응답: " + crumbResponse);
-            if (!crumbResponse.trim().startsWith("{")) {
-                throw new BusinessException(ErrorCode.JENKINS_CRUMB_REQUEST_FAILED);
-            }
-
-            JsonNode crumbJson = mapper.readTree(crumbResponse);
-            String crumb = crumbJson.get("crumb").asText();
-            String crumbField = crumbJson.get("crumbRequestField").asText();
-
-            // 2️. 토큰 요청
-            String tokenUrl = jenkinsUrl + "/user/" + username + "/descriptorByName/jenkins.security.ApiTokenProperty/generateNewToken";
-            String tokenJsonPayload = "{\"newTokenName\":\"" + tokenName + "\"}";
-
-            List<String> curlCommand = Arrays.asList(
-                    "curl",
-                    "-u", username + ":" + password,
-                    "-b", cookiePath,
-                    "-c", cookiePath,
-                    "-s",
-                    "-X", "POST",
-                    tokenUrl,
-                    "-H", crumbField + ":" + crumb,
-                    "-H", "Content-Type: application/json",
-                    "-H", "Referer: " + jenkinsUrl + "/",
-                    "-d", tokenJsonPayload
-            );
-
-
-            Process tokenProcess = new ProcessBuilder(curlCommand)
-                    .redirectErrorStream(true).start();
-
-            String tokenResponse = new BufferedReader(new InputStreamReader(tokenProcess.getInputStream()))
-                    .lines().collect(Collectors.joining());
-
-
-            if (!tokenResponse.trim().startsWith("{")) {
+            String prefix = "[INIT] Jenkins API Token:";
+            if (!result.contains(prefix)) {
                 throw new BusinessException(ErrorCode.JENKINS_TOKEN_RESPONSE_INVALID);
             }
 
-            JsonNode tokenJson = mapper.readTree(tokenResponse);
-            String token = tokenJson.path("data").path("tokenValue").asText();
-
-            if (token == null || token.isBlank()) {
+            String token = result.substring(result.indexOf(prefix) + prefix.length()).trim();
+            if (token.isBlank()) {
                 throw new BusinessException(ErrorCode.JENKINS_TOKEN_PARSE_FAILED);
             }
 
             return token;
-
-        } catch (Exception e) {
+        } catch (IOException e) {
             e.printStackTrace();
             throw new BusinessException(ErrorCode.JENKINS_TOKEN_REQUEST_FAILED);
         }
     }
+
+
+
 
 
     @Override
